--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,5 +1,12 @@
-.profile {
+.form-container {
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    align-items: center;
 }
+
+.submit {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
