--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,30 +1,36 @@
 <h1>Please fill the following form</h1>
 
-<form [formGroup]="profile" class="profile">
-    <div class="name">
-        <label for="fullName">Nome completo:</label>
-        <input type="text" id="fullName" formControlName="fullName">
-        <div *ngIf="profile.get('fullName')?.hasError('required')  && profile.get('fullName')?.touched" class="error-message">
-            Este campo é obrigatório.
+<div class="form-container">
+    <form [formGroup]="profile" class="profile">
+        <div class="name section">
+            <p for="fullName">Nome completo:</p>
+            <input type="text" id="fullName" formControlName="fullName">
+            <p *ngIf="profile.get('fullName')?.hasError('required')  && profile.get('fullName')?.touched" class="error-message">
+                Este campo é obrigatório.
+            </p>
         </div>
-    </div>
-    <div class="emailAddress">
-        <label for="email">Email:</label>
-        <input type="text" id="email" formControlName="email">
-        <div *ngIf="profile.get('email')?.hasError('required')  && profile.get('email')?.touched" class="error-message">
-            Este campo é obrigatório.
+        <div class="emailAddress section">
+            <p for="email">Email:</p>
+            <input type="text" id="email" formControlName="email">
+            <p *ngIf="profile.get('email')?.hasError('required')  && profile.get('email')?.touched" class="error-message">
+                Este campo é obrigatório.
+            </p>
+            <p *ngIf="profile.get('email')?.hasError('email')  && profile.get('email')?.touched" class="error-message">
+                Formato inválido.
+            </p>
         </div>
-        <div *ngIf="profile.get('email')?.hasError('email')  && profile.get('email')?.touched" class="error-message">
-            Formato inválido.
+        <div class="NIF section">
+            <p for="nif">NIF:</p>
+            <input type="text" id="nif" formControlName="nif">
+            <p *ngIf="profile.get('nif')?.hasError('required')  && profile.get('nif')?.touched" class="error-message">
+                Este campo é obrigatório.
+            </p>
+            <p *ngIf="profile.get('nif')?.hasError('invalidNifLength')  && profile.get('nif')?.touched" class="error-message">
+                Por favor insira um NIF valido.
+            </p>
         </div>
-    </div>
-    <div class="NIF">
-        <label for="nif">NIF:</label>
-        <input type="text" id="nif" formControlName="nif">
-        <div *ngIf="profile.get('nif')?.hasError('required')  && profile.get('nif')?.touched" class="error-message">
-            Este campo é obrigatório.
+        <div class="submit">
+            <button class="submit">Sumbit</button>
         </div>
-       
-    </div>
-    <button>Sumbit</button>
-</form>
+    </form>
+</div>
