asubmit button now disabled until form correctly filled

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -30,7 +30,7 @@
             </p>
         </div>
         <div class="submit">
-            <button class="submit">Sumbit</button>
+            <button class="submit" [disabled]="!isFormValid()">Submit</button>
         </div>
     </form>
 </div>
