added city list, now need to filter it based on selected country

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -40,17 +40,16 @@
            <p for="country">País:</p>
            <select id="country" formControlName="country">
                 <option value="">Selecione um país</option>
-                <option *ngFor="let country of countriesList" [value]="country.name">{{ country.name }}</option>
+                <option *ngFor="let country of countriesList" [value]="country.id">{{ country.name }}</option>
             </select>
         </div>
         <div class="city section">
-            <p for="city">Cidade:</p>
-        <!--        
+            <p for="city">Cidade:</p>      
             <select id="city" formControlName="city">
-                 <option value="">Selecione uma cidade</option>
-                 <option *ngFor="let city of citiesList" [value]="city.name">{{ city.name }}</option>
-             </select>
-        -->
+                <option value="">Selecione uma cidade</option>
+                <option *ngFor="let city of citiesList" [value]="city.id">{{ city.cityName }}</option>   
+
+            </select>
         </div>
         <div class="submit">
             <button class="submit" [disabled]="!isFormValid()">Submit</button>
