--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,26 +1,51 @@
-/*.form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-*/
-.profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 10px;
-    width: 100%;
+
+.form-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.profile {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  width: 50%;
+}
+
+
+input, select {
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.gender-container {
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+input[type="radio"] {
+  height: 15px;
+  width: 15px;
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+
+
 .submit {
-    display: flex;
-    justify-content: center;
+  /*display: flex;
+  */
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
 }
 
 .error-message {
   color: red;
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
-#addressStreet {
-  width: 100%
-}
